[package]
name = "ghub"
version = "0.1.0"
authors = ["Sendy Halim <sendyhalim93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.10" }
env_logger = { version = "0.7" }
failure = { version = "0.1" }
futures = { version = "0.3" }
log = { version = "0.4.8" }
reqwest = { version = "0.10.4", features = ["json", "rustls-tls", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "0.2", features = ["full"] }
